crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m60_4_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-060-Multicart60/4-in-1 (Mapper 60) [p1].nes
rom_sha256=5125607a6df01506ba12704876d5edf3b67be6d8f0a9361591a637ff5afd48e9
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=48c45500114cfab3
checkpoint f600 fb_fnv1a64=f1092e61e04a4563
