crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m72_doraemon_world_3_by_kiku.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-072-Jaleco72/Doraemon World 3 by Kiku (Doraemon Hack).nes
rom_sha256=088f684b561169a6becf4120c8a8ab77a56ac15ec39f9f48c6f2aa6e535d59ae
frames=600
fb_bytes=245760
cycles=17838622
audio_samples=439526
audio_fnv1a64=7f2d3a68e80a2efe
checkpoint f600 fb_fnv1a64=89ee4c476c97a325
