crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m94_senjou_no_ookami.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-094-UN1ROM/Senjou no Ookami (J) [!].nes
rom_sha256=56a72cd018e7fffbc556789b6e170ae062f5e3792c322b912d7ab5615bcaa863
frames=600
fb_bytes=245760
cycles=17838526
audio_samples=439524
audio_fnv1a64=9331b67ff1fb8068
checkpoint f600 fb_fnv1a64=a357897830ba933a
